Bug 901955 - Get 'opacity' property changes on SVG working again. r=roc, a=bajaj